--- a/TPAPIRestFrontWebValentinoCarignano/styles.css
+++ b/TPAPIRestFrontWebValentinoCarignano/styles.css
@@ -2,7 +2,11 @@
     background-color: #f9f9f9;
     border-radius: 5px;
     box-shadow: 1px 0 4px rgb(0, 0, 0, .2);
-    margin: 30px;
+    margin: 25px;
+}
+
+h3{
+    text-align: center;
 }
 
 /* Ajusta las flechas del carrusel a los extremos */
@@ -25,8 +29,7 @@
     background-size: 50% 50%; /* Tamaño del icono */
 }
 
-/* Efecto hover */
-.carousel-control-prev:hover,
-.carousel-control-next:hover {
-    background-color: rgba(0,0,0,0.2); /* Fondo semitransparente al pasar mouse */
+.carousel-inner{
+    width: 72%;
+    margin: 0 auto;
 }
